@@ -1,3 +1,12 @@
 # DigitalClock
 
 ## Digital Clock counter developed in java and javaFX GUI
+
+### How to run
+
+- Add javafx library to the project
+- Use VmOptions or VmArgs and store this:
+```bash
+--module-path /pathToJavaFxLibrary/lib --add-modules javafx.controls,javafx.fxml
+```
+- Run the Project
